--- a/app/client/index.html
+++ b/app/client/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
   <h1>Spark</h1>
-
-  <div ng-view></div>
-
+  <div ng-controller = "sparkController">{{message}}</div>
+  <!-- <div ng-view></div> -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
-<script src="application.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
