basic facebook login implemented

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -10,6 +10,13 @@
 
   <div ng-view></div>
 
+  <!-- this button here just to test back-end routes !-->
+  <form action="/auth/facebook" method="get">
+  <div>
+    <input type="submit" value="Log In With Facebook">
+  </div>
+</form>
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
 <script src="application.js"></script>
