angular files now properly loading and rendering

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
-<html ng-app = 'spark'>
+<html ng-app='myApp'>
 <head>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <title>Spark</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
+ <title></title>
 </head>
 <body>
-  <h1>Spark</h1>
-  <div ng-view></div>
-
-<<<<<<< HEAD
-<script src="app.js"></script>
-=======
-  <!-- this button here just to test back-end routes !-->
-  <form action="/auth/facebook" method="get">
-  <div>
-    <input type="submit" value="Log In With Facebook">
-  </div>
-</form>
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
-<script src="application.js"></script>
->>>>>>> b707755754f7c2837d7655de4edf88a3bd627c9b
+<h1>Hey</h1>
+<div ng-controller='myController'>
+ <div>{{message}}</div>
+ <ul>
+   <li ng-repeat="category in categories">{{category.name}}</li>
+ </ul>
+<input type="" name="" ng-model="hello">
+ <h1>{{hello}}</h1>
+</div>
+<script src="bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
