--- a/app/client/index.html
+++ b/app/client/index.html
@@ -13,6 +13,13 @@
 <input type="" name="" ng-model="hello">
  <h1>{{hello}}</h1>
 </div>
+
+<form action="/auth/facebook" method="get">
+  <div>
+    <input type="submit" value="Log In With Facebook">
+  </div>
+</form>
+
 <script src="bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
 </body>
