--- a/app/client/index.html
+++ b/app/client/index.html
@@ -8,12 +8,12 @@
 <h1>Spark</h1>
 <div ng-view></div>
 
-<!-- <form action="/auth/facebook" method="get">
+<form action="/auth/facebook" method="get">
   <div>
     <input type="submit" value="Log In With Facebook">
   </div>
 </form>
- -->
+
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="controllers/controllers.js"></script>
