basic styling added

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -2,10 +2,13 @@
 <html ng-app='spark'>
 <head>
  <title></title>
+ <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+ <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/boostrap-theme.min.css">
+ <link rel="stylesheet" type="text/css" href="src/styles/styles.css">
 </head>
 <body>
 
-<h1>Spark</h1>
+<h1 id="mainHeader">Spark</h1>
 
   <div ng-view></div>
 
