--- a/app/client/index.html
+++ b/app/client/index.html
@@ -4,13 +4,16 @@
  <title></title>
  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/boostrap-theme.min.css">
+ <link href="https://fonts.googleapis.com/css?family=Galada|Raleway" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="src/styles/styles.css">
 </head>
 <body>
 
 <h1 id="mainHeader">Spark</h1>
 
-  <div ng-view></div>
+  <div id="viewBox">
+    <div ng-view></div>
+  </div>
 
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
