Added favicon and refactored survey view

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html ng-app='spark'>
 <head>
- <title></title>
+ <title>Spark</title>
  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/boostrap-theme.min.css">
  <link href="https://fonts.googleapis.com/css?family=Galada|Raleway" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="src/styles/styles.css">
+ <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 </head>
 <body>
 
