--- a/app/client/index.html
+++ b/app/client/index.html
@@ -20,8 +20,8 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-<script src="controllers/controllers.js"></script>
-<script src="services/services.js"></script>
+<script src="controllers.js"></script>
+<script src="services.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
